@@ -36,6 +36,7 @@ Mantis ChangeLog
  * Fix #3186: $t_protocol not set right  (PHP 4.3.0/Netscape Enterprise 6.1/Linux installation with Mozilla client).
  * Fix #3218: Version vs. Product version confusing (renamed Version to OS Version in advanced pages - English language).
  * Fix #3214: Private projects links get replaced by public project links.
+ * Fix #3225: Row with the "private" checkbox hasn't got a colspan of 6.
  * Fix #3231: Redirect problem when user clicks on a bug link while not logged in.
  * Fix #3230: German translation [corrections].
  * Languages: Updated Italian, German, Spanish, Slovak, Swedish and Dutch localisations.
